Fluido no duto transparente: frente que percorre a linha, textura de source e brilho próprio
Cada cabo enchia sozinho como um tanque, todos ao mesmo tempo: numa coluna
vertical, uma pilha de segmentos meio cheios; no braço do conector, meia
lua entrando no colar. Agora o fluido é uma frente: cada cabo rastreia no
cliente de onde o fluido vem, pelas direções que a rede manda, e a onda
parte da entrada e cruza um cabo a cada 10 ticks, entrando pelo braço de
entrada, atravessando o núcleo e saindo por todos os outros braços; o
conector enche por último, como um plugue. Quando a rede para, a cauda sai
pelo mesmo caminho. Um chunk que carrega com fluido correndo aparece cheio.

A rede só dava direção aos cabos de rotas que entregaram fluido; com os
destinos cheios a lava ficava no buffer sem direção nenhuma e cada cabo
começava junto. Uma linha que recebeu fluido espalha a direção a partir da
entrada para os cabos sem rota; a rota real sobrescreve quando entrega.

O fluido usa a textura parada, como uma source, sem deslizar pelo eixo, e
recebe a emissão de luz do próprio fluido, como o tanque já fazia: lava
brilha no escuro.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>